Change Notes
=============

2010-12-09 jbornema
	- EmptyExtractor using now a FileSource with no data for better compatibility
	- Job lastDuration property added, so even if the job is running the last duration can be retrieved
	- DbColumnDef.toString() implemented
	- JDBCLoader.replaceOnColumnsNullValue property added used on the replaceOnColumn sql join to capture also "null" joined records
	  Method autoDetectColumnTypes uses boolean autoDetectColumnTypesRunning to fix autoDetect bug that created inconsistent table data
	  when both features are in use
	  Auto alter feature support not conversion of long to float
	- JobTableLabelProvider support TriggerList
	- ZipEntrySource return now the zip file

2010-10-19 jbornema
	- XLSExtractor uses Column0..xx for unnamed columns, new XLSFileSource(FilesSource) is used for non XLSFileSource sources
	- XLSFileSource.otherSource added, overwritten missing interface methods
	- JDBCUtil.ensureColumn(Connection con, String tableName, String columnName, String sqlTypeDef) added
	- CubeLoader: fixed NPE in onProcessFinished (using missing columns function)
	- JDBCLoader: call transformer.postSourceProcessing on all tranformers in autoDetectColumnTypes method
	- URLFileSource.getFilename() implemented
	- DateTransformer additional pattern added and opened the parsing for the outside
	- TriggerList added to have a list of triggers that can be used for a job (first one being due will be used) 

2010-10-08 jbornema
	- JDBCLoader skips "" columns for table column creation
	- JDBCLoader treat String for type detection like "002123" now as String instead of Number
	- URLFileSource.IsAvailable() and getName() implemented

2010-10-02 jbornema
	- IJobContext / JobContact added
	- IRecord / Record: hasNext() and setHasNext(boolean) added to support check on following records provided by extractor
	- ICubeDataMapper.getDimensionMapping(IDimension) added