@@ -16,7 +16,7 @@ public class ScheduledTrigger implements ITrigger {
 
 	public enum Type {
 		DAILY, // fixed time daily execution at a  
-		INTERVALL, // starts the job again every x seconds after the last execution
+		INTERVAL, // starts the job again every x seconds after the last execution
 		WEEKLY,
 		MONTLY,
 		ONCE
@@ -28,9 +28,12 @@ public class ScheduledTrigger implements ITrigger {
 	
 	private int hourOfDay = 0;
 	private int minuteOfDay = 0;
+	private Integer hourOfDayAfterError;
+	private Integer minuteOfDayAfterError;
 	
-	private int intervallInSeconds;
-	
+	private int intervalInSeconds;
+	private Integer intervalInSecondsAfterError;
+
 	private Date nextStart = null;
 	private Date lastRun = null;
 	
@@ -54,15 +57,26 @@ public class ScheduledTrigger implements ITrigger {
 	}
 
 	/**
+	 * @param hourOfDay
+	 * @param minuteOfDay
+	 * @param hourOfDayAfterError
+	 * @param minuteOfDayAfterError
+	 */
+	public ScheduledTrigger(int hourOfDay, int minuteOfDay, int hourOfDayAfterError, int minuteOfDayAfterError) {
+		this(hourOfDay, minuteOfDay);
+		this.hourOfDayAfterError = hourOfDayAfterError;
+		this.minuteOfDayAfterError = minuteOfDayAfterError;
+	}
+	
+	/**
 	 * @param intervallInSeconds
 	 */
-	public ScheduledTrigger(int intervallInSeconds) {
+	public ScheduledTrigger(int intervalInSeconds) {
 		super();
-		this.intervallInSeconds = intervallInSeconds;
-		type = Type.INTERVALL;
+		this.intervalInSeconds = intervalInSeconds;
+		type = Type.INTERVAL;
 		calculateNextStart();
 	}
-
 
 	/* (non-Javadoc)
 	 * @see de.xwic.etlgine.ITrigger#isDue()
@@ -87,30 +101,58 @@ public class ScheduledTrigger implements ITrigger {
 	 * 
 	 */
 	private void calculateNextStart() {
+		calculateNextStart(false);
+	}
+	
+	/**
+	 * @param withErrors
+	 */
+	private void calculateNextStart(boolean withErrors) {
 
 		Date now = new Date();
 		
 		switch (type) {
+		case MONTLY:
+		case WEEKLY:
 		case DAILY: {
 			
 			Date last = lastRun != null ? lastRun : now;
 			
 			Calendar cal = Calendar.getInstance();
-			cal.set(Calendar.HOUR_OF_DAY, hourOfDay);
-			cal.set(Calendar.MINUTE, minuteOfDay);
+			if (withErrors && hourOfDayAfterError != null && minuteOfDayAfterError != null) {
+				cal.set(Calendar.HOUR_OF_DAY, hourOfDayAfterError);
+				cal.set(Calendar.MINUTE, minuteOfDayAfterError);
+			} else {
+				cal.set(Calendar.HOUR_OF_DAY, hourOfDay);
+				cal.set(Calendar.MINUTE, minuteOfDay);
+			}
 			cal.set(Calendar.SECOND, 0);
 			cal.set(Calendar.MILLISECOND, 0);
 			
 			if (cal.getTime().before(last)) {
-				cal.add(Calendar.DAY_OF_MONTH, 1);
+				switch (type) {
+				case MONTLY:
+					cal.add(Calendar.MONTH, 1);
+					break;
+				case WEEKLY:
+					cal.add(Calendar.WEEK_OF_MONTH, 1);
+					break;
+				case DAILY:
+					cal.add(Calendar.DAY_OF_MONTH, 1);
+					break;
+				}
 			}
 			nextStart = cal.getTime();
 			
 		}; break;
-		case INTERVALL : {
+		case INTERVAL : {
 			
 			Calendar cal = Calendar.getInstance();
-			cal.add(Calendar.SECOND, this.intervallInSeconds);
+			if (withErrors && intervalInSecondsAfterError != null) {
+				cal.add(Calendar.SECOND, intervalInSecondsAfterError);
+			} else {
+				cal.add(Calendar.SECOND, intervalInSeconds);
+			}
 			
 			nextStart = cal.getTime();
 			
@@ -125,7 +167,7 @@ public class ScheduledTrigger implements ITrigger {
 	 */
 	public void notifyJobFinished(boolean withErrors) {
 		
-		calculateNextStart();
+		calculateNextStart(withErrors);
 		
 	}
 
@@ -218,16 +260,75 @@ public class ScheduledTrigger implements ITrigger {
 
 	/**
 	 * @return the intervallInSeconds
+	 * @deprecated
 	 */
 	public int getIntervallInSeconds() {
-		return intervallInSeconds;
+		return intervalInSeconds;
 	}
 
 	/**
 	 * @param intervallInSeconds the intervallInSeconds to set
+	 * @deprecated
 	 */
 	public void setIntervallInSeconds(int intervallInSeconds) {
-		this.intervallInSeconds = intervallInSeconds;
+		this.intervalInSeconds = intervallInSeconds;
+	}
+
+	/**
+	 * @return the intervalInSeconds
+	 */
+	public int getIntervalInSeconds() {
+		return intervalInSeconds;
+	}
+
+	/**
+	 * @param intervalInSeconds the intervalInSeconds to set
+	 */
+	public void setIntervalInSeconds(int intervalInSeconds) {
+		this.intervalInSeconds = intervalInSeconds;
+	}
+
+	/**
+	 * @return the intervalInSecondsAfterError
+	 */
+	public Integer getIntervalInSecondsAfterError() {
+		return intervalInSecondsAfterError;
+	}
+
+	/**
+	 * @param intervalInSecondsAfterError the intervalInSecondsAfterError to set
+	 */
+	public ScheduledTrigger setIntervalInSecondsAfterError(Integer intervalInSecondsAfterError) {
+		this.intervalInSecondsAfterError = intervalInSecondsAfterError;
+		return this;
+	}
+
+	/**
+	 * @return the hourOfDayAfterError
+	 */
+	public Integer getHourOfDayAfterError() {
+		return hourOfDayAfterError;
+	}
+
+	/**
+	 * @param hourOfDayAfterError the hourOfDayAfterError to set
+	 */
+	public void setHourOfDayAfterError(Integer hourOfDayAfterError) {
+		this.hourOfDayAfterError = hourOfDayAfterError;
+	}
+
+	/**
+	 * @return the minuteOfDayAfterError
+	 */
+	public Integer getMinuteOfDayAfterError() {
+		return minuteOfDayAfterError;
+	}
+
+	/**
+	 * @param minuteOfDayAfterError the minuteOfDayAfterError to set
+	 */
+	public void setMinuteOfDayAfterError(Integer minuteOfDayAfterError) {
+		this.minuteOfDayAfterError = minuteOfDayAfterError;
 	}
 	
 }
